--- a/RetailPOS/nbproject/project.properties
+++ b/RetailPOS/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/RetailPOS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Users\\Peter\\Desktop\\Proyecto Comercio\\5.- Construccion\\Librerias\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=D:\\Drive\\Proyecto Comercio\\5.- Construccion\\Librerias\\mysql-connector-java-5.1.45-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
